Redundant Operations Tips in Status Bar when Transforming #120958

Closed
opened 2024-04-23 05:38:15 +02:00 by Ruri-Res · 3 comments

System Information
Operating system: Windows 10
Graphics card:

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-22 21:33, hash: 5644a0c62199
Worked: Prior to 4.2.0 49bd285529

Short description of error
may related to 49bd285529
Status Bar.png

Exact steps for others to reproduce the error
Transform something

**System Information** Operating system: Windows 10 Graphics card: **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-22 21:33, hash: `5644a0c62199` Worked: Prior to 4.2.0 49bd285529 **Short description of error** may related to 49bd285529e5521703e845ed7d162c0463d9146a ![Status Bar.png](/attachments/4ab70c30-7a5b-42e7-adf7-3129d36f03bb) **Exact steps for others to reproduce the error** Transform something
Ruri-Res added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-04-23 05:38:16 +02:00
Member

Thanks for the report. Can confirm.

Thanks for the report. Can confirm.
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-23 08:01:27 +02:00
Member

Indeed caused by 49bd285529
@Harley ^

Indeed caused by 49bd285529 @Harley ^
Member

I'll take a look. AFAICS, keymap is not found for the SNAP_INV_OFF hence it prints the raw text with str=Ctrl/ctrl

I'll take a look. AFAICS, keymap is not found for the `SNAP_INV_OFF` hence it prints the raw text with `str=Ctrl/ctrl`
Pratik Borhade self-assigned this 2024-04-23 12:39:55 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-24 20:21:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120958
No description provided.